# vietc

./: .gitignore  CHANGELOG.md  CHANGELOG.vi.md  Cargo.toml  LICENSE  Makefile  README.md  README.vi.md  RELEASE_CHECKLIST.md  install.sh  uninstall.sh  vietc.service  vietc.toml
.github/workflows/: build.yml  release.yml
NOTES/: terminal-vni.md
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: app_state.rs  commands.rs  config.rs  controller.rs  daemon.rs  device.rs  display.rs  env.rs  evdev_loop.rs  event.rs  ibus_control.rs  ibus_engine.rs  im_plan.rs  inject.rs  key_dedup.rs  log.rs  main.rs  password_detector.rs  signal.rs  stdin.rs  wayland_im.rs  x11_capture.rs
daemon/tests/: daemon_suite.rs
daemon/tests/common/: clipboard.rs  distro.rs  mod.rs  virtual_keyboard.rs
docs/: testing-dictionary.md  wayland-rootless.md
engine/: Cargo.toml  gen_tests_output.json
engine/examples/: gen_tests.rs  test_vni.rs  trace_events.rs
engine/src/: bamboo.rs  engine.rs  english.rs  event.rs  input_method.rs  lib.rs  spelling.rs  telex.rs  tests.rs  vni.rs
engine/tests/: auto_restore.rs  generated_bulk.rs  snapshot_tests.rs  tone_placement.rs
engine/tests/snapshots/: snapshot_tests__telex_snapshots.snap  snapshot_tests__vni_snapshots.snap
engine/tests/testdata/: telex_inputs.json  vni_inputs.json
packaging/: 99-vietc.rules  build-tarball.sh
packaging/appimage/: build-appimage.sh  vietc-xrecord.c  vietc.desktop
packaging/aur/: PKGBUILD
packaging/deb/: build-deb.sh  vietc.desktop
packaging/deb/DEBIAN/: control  postinst  postrm  prerm
packaging/flatpak/: FLATPAK_BUILD.md  build-flatpak.sh  com.vietc.VietPlus.json  io.github.vietc.VietPlus.json  vietc-wrapper.sh
protocol/: Cargo.toml  build.rs
protocol/src/: inject.rs  lib.rs  monitor.rs  uinput_client.rs  uinput_monitor.rs  wayland_im.rs  x11_capture.rs  x11_inject.rs
scratch/: test_xdotool.py
scripts/: gen_test_cases.py  setup-test-vm.sh
ui/: Cargo.toml
ui/data/: window.ui
ui/src/: config.rs  main.rs  tray.rs  window.rs
uinputd/: Cargo.toml
uinputd/src/: main.rs
vietcctl/: Cargo.toml
vietcctl/src/: main.rs
vk/: Cargo.toml  PLAN.md  README.md
vk/src/: clipboard.rs  dictionary.rs  main.rs  virtual_keyboard.rs  vncode.rs
web/: README.md  index.html  metadata.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: DragonMascot.tsx  Features.tsx  Footer.tsx  Hero.tsx  KeycapGallery.tsx  Navbar.tsx  SetupGuide.tsx  TerminalSimulator.tsx
web/src/utils/: vniParser.ts
