[package]
name = "vietc-daemon"
version = "0.1.0"
edition = "2021"
description = "Viet+ background daemon"

[[bin]]
name = "vietc"
path = "src/main.rs"

[features]
default = ["x11", "wayland"]
x11 = ["vietc-protocol/x11"]
wayland = ["vietc-protocol/wayland-protocol"]

[dependencies]
vietc-engine = { path = "../engine" }
vietc-protocol = { path = "../protocol" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
evdev = "0.12"
libc = "0.2"
dirs = "5"
