[package]
name = "vietc-protocol"
version = "0.1.0"
edition = "2021"
description = "Viet+ keystroke injection backends (X11/Wayland)"

[dependencies]
libc = "0.2"
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["staging"], optional = true }

[features]
default = []
x11 = ["dep:pkg-config"]
wayland-protocol = ["dep:wayland-client", "dep:wayland-protocols"]

[build-dependencies]
pkg-config = { version = "0.3", optional = true }
